// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubmissionView /> renders disable show rubric 1`] = `
<div
  className="assessment-content-layout mr-auto ml-auto"
>
  <div
    className="content-wrapper"
  >
    <Row
      className="flex-nowrap m-0"
    >
      <Col
        className="p-0"
      >
        <div>
          <div
            className="d-flex justify-content-between"
          >
            <h1>
              Your response
            </h1>
          </div>
          <StatusAlert
            hasSubmitted={false}
          />
          <Instructions />
          <SubmissionPrompts
            isReadOnly={false}
            onUpdateTextResponse={[MockFunction]}
            textResponses={
              Array [
                "response1",
                "response2",
              ]
            }
          />
          <FileUpload
            isReadOnly={false}
            onDeletedFile={[MockFunction]}
            onFileUploaded={[MockFunction]}
            uploadedFiles={Array []}
          />
        </div>
        <ModalActions
          options={
            Object {
              "hasSubmitted": false,
            }
          }
        />
      </Col>
    </Row>
  </div>
</div>
`;

exports[`<SubmissionView /> renders enable show rubric 1`] = `
<div
  className="assessment-content-layout mr-auto ml-auto"
>
  <div
    className="content-wrapper"
  >
    <Row
      className="flex-nowrap m-0"
    >
      <Col
        className="p-0"
      >
        <div>
          <div
            className="d-flex justify-content-between"
          >
            <h1>
              Your response
            </h1>
          </div>
          <StatusAlert
            hasSubmitted={false}
          />
          <Instructions />
          <SubmissionPrompts
            isReadOnly={false}
            onUpdateTextResponse={[MockFunction]}
            textResponses={
              Array [
                "response1",
                "response2",
              ]
            }
          />
          <FileUpload
            isReadOnly={false}
            onDeletedFile={[MockFunction]}
            onFileUploaded={[MockFunction]}
            uploadedFiles={Array []}
          />
        </div>
        <ModalActions
          options={
            Object {
              "hasSubmitted": false,
            }
          }
        />
      </Col>
      <Rubric />
    </Row>
  </div>
</div>
`;
